--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi[standard]>=0.115.4",
+    "loguru>=0.7.2",
     "playwright-recaptcha>=0.5.1",
     "retry-async>=0.1.4",
 ]
 
 [project.scripts]
-main = "recapcha_solver.app:main"
+app = "recapcha_solver.app:main"
+main = "recapcha_solver:main"
+
 
 [build-system]
 requires = ["hatchling"]
